# bingvim

./: CMakeLists.txt  README.md  example_file.txt  justfile  main.cpp
src/: main.cpp
src/core/: config.hpp  edit.hpp  types.hpp  util.cpp  util.hpp
src/editor/: buffer.cpp  buffer.hpp  editor.cpp  editor.hpp  pane.cpp  pane.hpp  viewport.cpp  viewport.hpp
